<resources>
    <string name="app_name">WGC_HubApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot password</string>
</resources>
